# ai_safety_modbus_manager

./: .gitmodules  CMakeLists.txt  README.md  modbus_simulator.py
config/: modbus_config.json
docs/: main_controller_interface.md  shared_memory_interface.md
include/ai_safety_modbus_manager/bridge/: shared_memory_bridge.h
include/ai_safety_modbus_manager/common/: modbus_control.h  standard_msg.h
include/ai_safety_modbus_manager/config/: modbus_config.h
include/ai_safety_modbus_manager/devices/: hookWarning.h  multi_turn_encoder_rtu.h  trolleyControl.h
include/ai_safety_modbus_manager/devices/hookWarning/: hookWarning_mqtt.h
include/ai_safety_modbus_manager/manager/: manager_client.h
include/bridge/: shared_memory_bridge.h
include/config/: modbus_config.h
include/devices/: trolleyControl.h
src/bridge/: shared_memory_bridge.cpp
src/common/: modbus_control.cpp
src/config/: modbus_config.cpp
src/devices/: hookWarning.cpp  multi_turn_encoder_rtu.cpp  trolleyControl.cpp
src/devices/hookWarning/: hookWarning.cpp  hookWarning_mqtt.cpp
src/manager/: manager_client.cpp
tests/: device_headers_test.cpp
third_party_libraries/ai_safety_common/include/ai_safety_common/: shared_memory_types.hpp
third_party_libraries/libmodbus/: modbus-tcp.c
